# threddsclient

./: .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  environment.yml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
examples/: noaa_example.ipynb
tests/: test_birdhouse_sample.py  test_catalog.py  test_dataset.py  test_noaa_sample.py  test_online.py  test_service.py  test_utils.py
threddsclient/: __init__.py  catalog.py  client.py  nodes.py  parser.py  thredds.py  utils.py
