[bumpversion]
current_version = 0.4.0
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:threddsclient/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[tool:pytest]
addopts = 
	--strict
	--tb=native
	tests/
python_files = test_*.py
markers = 
	online: mark test to need internet connection
	slow: mark test to be slow

[flake8]
ignore = F401,E402
max-line-length = 120
exclude = 
	.git,
	__pycache__,
	docs,
	dist,
	examples

